prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/hex_too_many_digits.diag.txt
ERROR: too many digits for a hex number
testData/diagnostics/compilation_errors/lex_errors/hex_too_many_digits.nut:2:8

// EXPECT_ERROR: "too many digits for a hex number"
let x = 0x100000000000000000
        ^-------------------


